# JSON_Comparison

./: README.md  pyproject.toml  requirements.txt
configs/: answer.json
src/: main.py
tests/: test_main.py
